Fix: Layout issue

--- a/css/reservation.css
+++ b/css/reservation.css
@@ -2,7 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Forum&display=swap");
 
 * {
-
   box-sizing: border-box;
   font-family: "DM Sans", sans-serif;
   color: white; /* Set default text color to white */
@@ -13,17 +12,15 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-=======
 }
 
 button {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 a {
-    color: yellowgreen;
-    text-decoration: none;
-
+  color: yellowgreen;
+  text-decoration: none;
 }
 
 .reservation {
@@ -32,14 +29,12 @@ a {
 }
 
 .container {
-
   max-width: 1200px;
   margin: 0 auto;
   border: 3px solid white;
   border-radius: 2rem;
   background-color: rgb(8, 8, 8, 0.9);
   box-shadow: 0 0 20px 2px rgba(255, 255, 255, 0.5);
-
 }
 
 .reservation-form {
@@ -69,10 +64,7 @@ a {
 
 .form-text {
   margin-bottom: 2rem;
-
-
 }
-
 
 .link {
   color: yellowgreen;
@@ -86,7 +78,7 @@ a {
 
 .input-field {
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 0;
   margin: 0.5rem 0;
   border: 1px solid #333;
   background-color: rgba(255, 255, 255, 0.1);
@@ -101,7 +93,6 @@ a {
   box-shadow: 0 0 5px yellowgreen;
 }
 
-
 .input-select {
   appearance: none;
   padding: 1rem;
@@ -114,10 +105,9 @@ a {
   transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-.input-select option{
-    color: #333;
+.input-select option {
+  color: #333;
 }
-
 
 .input-select:hover,
 .input-select:focus {
@@ -165,10 +155,9 @@ a {
   margin-bottom: 1.5rem;
   color: grey;
 }
-.body-4 i{
-    margin-right: 10px;
+.body-4 i {
+  margin-right: 10px;
 }
-
 
 .form-right {
   background-size: cover;
@@ -178,27 +167,24 @@ a {
 
 .contact-label,
 .body-4 {
-
   color: white;
 }
 
 .animated {
-    transition: transform 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
 .animated:hover {
-    transform: scale(1.05); 
+  transform: scale(1.05);
 }
 
-button{
-    transition: transform 0.3s ease-in-out;
+button {
+  transition: transform 0.3s ease-in-out;
 }
 
 button:hover {
-    transform: scale(1.05); 
-}
-
-    color: black;
+  transform: scale(1.05);
+  color: black;
 }
 
 .fa-facebook,
@@ -206,5 +192,3 @@ button:hover {
 .fa-twitter {
   color: #fff;
 }
-
-
